# spotify-vpn

./: .git-blame-ignore-revs  .gitignore  .mailmap  .svncommitters  CMakeLists.txt  CONTRIBUTING.rst  COPYING  ChangeLog  Changes.rst  INSTALL  Makefile.am  PORTS  README  README.cmake.md  README.dco.md  README.ec  README.mbedtls  README.wolfssl  compat.m4  config.h.cmake.in  configure.ac  ltrc.inc  version.m4
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  coverity-scan.yml
contrib/: multilevel-init.patch
contrib/cmake/: git-version.py  parse-version.m4.py
contrib/extract-crl/: extractcrl.py
contrib/openvpn-fwmarkroute-1.00/: README
contrib/pull-resolv-conf/: client.down  client.up
contrib/vcpkg-manifests/mingw/: vcpkg.json
contrib/vcpkg-manifests/windows/: vcpkg.json
contrib/vcpkg-ports/pkcs11-helper/: config-w32-vc.h.in-indicate-OpenSSL.patch  nmake-compatibility-with-vcpkg-nmake.patch
debug/: doval
dev-tools/: gen-release-tarballs.sh  gerrit-send-mail.py  git-pre-commit-uncrustify.sh  reformat-all.sh  special-files.lst  update-copyright.sh
distro/: Makefile.am
distro/systemd/: Makefile.am  README.systemd  openvpn-client@.service.in  openvpn-server@.service.in  tmpfiles-openvpn.conf
doc/: CMakeLists.txt  Makefile.am  README.man  README.plugins  android.txt  gui-notes.txt  interactive-service-notes.rst  keying-material-exporter.txt  management-notes.txt  openvpn-examples.5.rst  openvpn.8.rst  t_server_null.rst  tls-crypt-v2.txt
doc/doxygen/: Makefile.am  doc_compression.h  doc_control_processor.h  doc_control_tls.h  doc_data_control.h  doc_data_crypto.h  doc_eventloop.h  doc_external_multiplexer.h  doc_fragmentation.h  doc_internal_multiplexer.h  doc_key_generation.h  doc_mainpage.h  doc_memory_management.h  doc_protocol_overview.h  doc_reliable.h  doc_tunnel_state.h  openvpn.doxyfile.in
doc/man-sections/: advanced-options.rst  cipher-negotiation.rst  client-options.rst  connection-profiles.rst  encryption-options.rst  example-fingerprint.rst  examples.rst  generic-options.rst  inline-files.rst  link-options.rst  log-options.rst  management-options.rst  network-config.rst  plugin-options.rst  protocol-options.rst  proxy-options.rst  renegotiation.rst  script-options.rst  server-options.rst  signals.rst  tls-options.rst  unsupported-options.rst  virtual-routing-and-forwarding.rst  vpn-network-options.rst  windows-options.rst
doc/tests/: authentication-plugins.md
include/: Makefile.am  openvpn-msg.h  openvpn-plugin.h.in
sample/: Makefile.am
sample/sample-config-files/: README  client.conf  firewall.sh  loopback-client  loopback-server  openvpn-shutdown.sh  openvpn-startup.sh  server.conf
sample/sample-keys/: client-ec.crt  client.crt  gen-sample-keys.sh  openssl.cnf  server-ec.crt  server.crt  ta.key
sample/sample-plugins/: Makefile.am  Makefile.plugins  README
sample/sample-plugins/client-connect/: README  sample-client-connect.c
sample/sample-plugins/defer/: multi-auth.c  winbuild
sample/sample-plugins/keying-material-exporter-demo/: README  http-client.py  http-server.py  keyingmaterialexporter.c
sample/sample-plugins/log/: log.c  log_v3.c
sample/sample-plugins/simple/: base64.c  simple.c  simple.def  winbuild
sample/sample-scripts/: auth-pam.pl  bridge-start  bridge-stop  totpauth.py  ucn.pl  verify-cn
sample/sample-windows/: sample.ovpn
src/: Makefile.am
src/compat/: Makefile.am  compat-basename.c  compat-daemon.c  compat-dirname.c  compat-gettimeofday.c  compat-strsep.c  compat.h
src/openvpn/: Makefile.am  argv.c  argv.h  auth_token.c  auth_token.h  base64.c  base64.h  basic.h  buffer.c  buffer.h  circ_list.h  clinat.c  clinat.h  common.h  comp-lz4.c  comp-lz4.h  comp.c  comp.h  compstub.c  console.c  console.h  console_builtin.c  console_systemd.c  crypto.c  crypto.h  crypto_backend.h  crypto_mbedtls.c  crypto_mbedtls.h  crypto_openssl.c  crypto_openssl.h  dco.c  dco.h  dco_freebsd.c  dco_internal.h  dco_linux.c  dco_linux.h  dco_win.c  dco_win.h  dhcp.c  dhcp.h  (+163 more)
src/openvpnmsica/: CMakeLists.txt  Makefile.am  dllmain.c  msica_arg.c  msica_arg.h  msiex.c  msiex.h  openvpnmsica.c  openvpnmsica.h  openvpnmsica_resources.rc
src/openvpnserv/: CMakeLists.txt  Makefile.am  common.c  interactive.c  openvpnserv_resources.rc  service.c  service.h  validate.c  validate.h
src/plugins/: Makefile.am
src/plugins/auth-pam/: Makefile.am  README.auth-pam  auth-pam.c  auth-pam.exports  pamdl.c  utils.c  utils.h
src/plugins/down-root/: Makefile.am  README.down-root  down-root.c  down-root.exports
src/tapctl/: Makefile.am  basic.h  error.c  error.h  main.c  tap.c  tap.h  tapctl_resources.rc
tests/: Makefile.am  ntlm_support.c  null_client_up.sh  t_client.rc-sample  t_client.sh.in  t_cltsrv.sh  t_lpback.sh  t_net.sh  t_server_null.rc-sample  t_server_null.sh  t_server_null_client.sh  t_server_null_default.rc  t_server_null_stress.sh
tests/unit_tests/: Makefile.am  README.md
tests/unit_tests/openvpn/: Makefile.am  cert_data.h  mock_get_random.c  mock_management.c  mock_msg.c  mock_msg.h  mock_ssl_dependencies.c  mock_win32_execve.c  pkey_test_utils.c  test_argv.c  test_auth_token.c  test_buffer.c  test_common.h  test_crypto.c  test_cryptoapi.c  test_misc.c  test_ncp.c  test_packet_id.c  test_pkcs11.c  test_pkt.c  test_provider.c  test_ssl.c  test_tls_crypt.c  test_user_pass.c
